<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="-30dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".ui.createwash.CreateWashFragment">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <EditText
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dimen_50"
                android:ems="10"
                android:hint="@string/txtAddress" />

            <EditText
                android:id="@+id/txtPlateNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dimen_50"
                android:ems="10"
                android:hint="@string/txtPlateNumberHint" />

            <EditText
                android:id="@+id/txtCarMake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dimen_50"
                android:ems="10"
                android:hint="@string/txtCarMakeHint" />

            <EditText
                android:id="@+id/txtCarModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dimen_50"
                android:ems="10"
                android:hint="@string/txtCarMakeHint" />

            <EditText
                android:id="@+id/txtCarColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtCarMake"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dimen_50"
                android:ems="10"
                android:hint="@string/txtCarColorHint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtCarColor"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblCarSize"
                    android:layout_width="100dp"
                    android:layout_height="@dimen/dimen_50"
                    android:text="Car Size:"
                    android:textSize="15dp" />

                <Spinner
                    android:id="@+id/spinCarSize"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/btnBook"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_70"
                android:text="@string/btnBookText" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>